# cardano-ibc-incubator

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  INVARIANTS.md  KNOWN_ISSUES.md  MILESTONE_3_HANDOFF.md  README.md  SECURITY.md  build.sh  cardano-ibc-report.tex  osmosis.patch  package-lock.json  package.json  setup_osmosis.sh  start-mithril.sh  start.sh  start_cardano.sh  stop.sh  swap.sh
cardano/: .env.example  .gitignore  README.md  aiken.toml  deploy.sh  package-lock.json
caribic/: .gitignore  Cargo.toml  README.md
caribic/config/: default-config.json  hermes-config.example.toml
caribic/src/: check.rs  config.rs  constants.rs  install.rs  logger.rs  main.rs  route_setup.rs  run.rs  setup.rs  start.rs  stop.rs  test.rs  utils.rs
caribic/src/chains/: cheqd.rs  cosmos_node.rs  hermes_support.rs  injective.rs  mod.rs  osmosis.rs
caribic/src/chains/cheqd/: config.rs  hermes.rs  lifecycle.rs  mod.rs
caribic/src/chains/injective/: config.rs  hermes.rs  lifecycle.rs  mod.rs
caribic/src/chains/osmosis/: config.rs  hermes.rs  lifecycle.rs  mod.rs
caribic/src/chains/stellar/: config.rs  hermes.rs  lifecycle.rs  mod.rs
caribic/src/commands/: audit.rs  benchmark.rs  chain.rs  chains.rs  check.rs  create.rs  demo.rs  health.rs  install.rs  keys.rs  mod.rs  query.rs  setup.rs  start.rs  stop.rs  test.rs  yaci_checkpoint.rs
caribic/src/demos/: message_exchange.rs  mod.rs  token_swap.rs
caribic/src/install/: platform.rs  runner.rs  tools.rs
caribic/src/process/: cardano.rs  docker.rs  hermes.rs  http.rs  mod.rs  runner.rs  system.rs
caribic/src/start/: hermes.rs
cosmos/: .dockerignore  .gitignore  Dockerfile  buf-wrapper.sh  cardano-entrypoint.sh  chain-state-hash.sh  docker-compose.yml  entrypoint.sh  go.work  go.work.sum  init-cardano-entrypoint.sh  init-entrypoint.sh  run-cardano-entrypoint.sh  run-entrypoint.sh
dapps/: README.md  docker-compose.yml
docs/: 02.solution-architecture-overview.md  05.high-level-solution-design.md  06.detailed-solution-architecture.md  10.infrastructure-requirements.md  101.key-considerations-and-challenges.md  102.deployment-guide.md  13.risks-and-mitigations.md  FAQ.md  architecture-overview.md  bridge-discovery-manifest.md  cardano-bridge-upgrade-compatibility.md  cardano-ibc-high-level-architecture-mithril.md  cardano-ibc-high-level-architecture.md  cardano-trace-registry.md  cross-chain-swap.md  denom-trace-mapping.md  host-state-utxo-sharding.md  mithril-light-client.md  probabilistic-light-client.md  stability-scored-light-client.md  token-swap-architecture.md
hermes-driver/cardano-chain-handle/: Cargo.toml  build.rs  config.toml
hermes-driver/cardano-chain-handle/.keys/: relayer-key.json
hermes-driver/cardano-chain-handle/src/: chain_handle.rs  config.rs  error.rs  gateway_client.rs  keyring.rs  lib.rs  main.rs  signer.rs  types.rs
hermes-driver/cardano-chain-handle/tests/: integration_test.rs
indexer/: .dockerignore  .env.example  .gitignore  README.md  cardano.yaml  cosmoshub.yaml  docker-compose.yml  osmosis.yaml  package.json  schema.graphql  subquery-multichain.yaml
osmosis-setup/: setup.sh
proto-types/: .gitignore  buf.work.yaml  go.mod  package-lock.json  package.json
relayer/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  git.sh  go.mod  (+5 more)
relayer-backup/: .gitignore  .goreleaser.yaml  Makefile  go.work  main.go
(+2585 files in other folders)
