[package]
name = "cardano-chain-handle"
version = "0.1.0"
edition = "2021"
authors = ["Webisoft <dev@webisoft.com>"]
description = "Hermes ChainHandle implementation for Cardano"
license = "Apache-2.0"

[dependencies]
# Hermes dependencies (will need to match Hermes version)
ibc-relayer = { version = "0.27", features = ["cardano"] }
ibc-relayer-types = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# gRPC for Gateway communication
tonic = "0.11"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography for Cardano signing
ed25519-dalek = "2.1"
bip39 = "2.0"
blake2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "cardano-chain-handle"
path = "src/main.rs"

[lib]
name = "cardano_chain_handle"
path = "src/lib.rs"

