[package]
name = "cardano-chain-handle"
version = "0.1.0"
edition = "2021"
authors = ["Webisoft <dev@webisoft.com>"]
description = "Hermes ChainHandle implementation for Cardano"
license = "Apache-2.0"

[dependencies]
# Hermes dependencies (will need to match Hermes version)
ibc-relayer = "0.27"
ibc-relayer-types = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# gRPC for Gateway communication
tonic = "0.11"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-types = "0.12"

# Cryptography for Cardano signing
ed25519-dalek = "2.1"
tiny-bip39 = { version = "1.0", package = "tiny-bip39" }  # BIP39 mnemonic handling
digest = "0.10"  # For Blake2b hashing
blake2 = { version = "0.10", features = ["std"] }
slip10 = "0.4"  # Ed25519 key derivation for CIP-1852
pallas-primitives = "0.30"  # Cardano CBOR parsing and transaction serialization
pallas-codec = "0.30"  # CBOR codec for Cardano
hex = "0.4"  # Hex encoding/decoding utilities

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[build-dependencies]
tonic-build = "0.11"

[lib]
name = "cardano_chain_handle"
path = "src/lib.rs"

